RESOLVED FIXED316366
[JSC] `ISO8601::parseDate` reads past the end of the buffer for short invalid strings
https://bugs.webkit.org/show_bug.cgi?id=316366
Summary [JSC] `ISO8601::parseDate` reads past the end of the buffer for short invalid...
Sosuke Suzuki
Reported 2026-06-04 19:56:27 PDT
...
Attachments
Sosuke Suzuki
Comment 1 2026-06-04 19:57:20 PDT
EWS
Comment 2 2026-06-04 21:17:17 PDT
Committed 314612@main (d58bad697e50): <https://commits.webkit.org/314612@main> Reviewed commits have been landed. Closing PR #66508 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-06-04 21:18:14 PDT
Note You need to log in before you can comment on or make changes to this bug.